Closed Bug 1353647 Opened 9 years ago Closed 8 years ago

Fix the inconsistency result of custom element v0 upgrade

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: edgar, Assigned: edgar)

References

Details

(Whiteboard: dom-ce-m2)

Attachments

(1 file, 1 obsolete file)

This bug is filed from bug 1299363 comment #68. There are two places doing prototype setup in old upgrade, - If definition comes after JS reflector creation, CustomElementRegistry::Upgrade will do prototype swizzling. - If definition comes before JS reflector creation, Element::WrapObject will set up the prototype. The later one does SubsumesConsideringDomain, but the former doesn't not. Although bug 1299363 might also touch these code, but bug 1299363 is to implement new upgrade steps, I would like to NOT change any behavour of old upgrade there, so fix the inconsistency here instead.
Attached patch Patch, v1 (obsolete) — Splinter Review
Attached patch Patch, v2Splinter Review
Attachment #8854773 - Attachment is obsolete: true
Comment on attachment 8854780 [details] [diff] [review] Patch, v2 Review of attachment 8854780 [details] [diff] [review]: ----------------------------------------------------------------- Hi William, could you help to review this? Thank you.
Attachment #8854780 - Flags: review?(wchen)
Whiteboard: dom-ce-m2
Blocks: 1299363
Attachment #8854780 - Flags: review?(wchen) → review+
Pushed by echen@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/717072f9f2c6 Fix the custom elements v0 upgrade inconsistency; r=wchen
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: