Bug 1353647 - Fix the custom elements v0 upgrade inconsistency; r=wchen

There are two places doing prototype setup in old upgrade,
- If definition comes after JS reflector creation, CustomElementRegistry::Upgrade will do prototype swizzling.
- If definition comes before JS reflector creation, Element::WrapObject will set up the prototype.

The later one does SubsumesConsideringDomain, but the former doesn't not.

This patch is to fix the inconsistency, i.e. the former case should also do SubsumesConsideringDomain.

MozReview-Commit-ID: G3gVsaEa0YF

--HG--
extra : rebase_source : 5e2081e470473cd1a1f642a2dc693127cb9486ca